src/objects/Scenario__c.object
<CustomObject>
    <description>Used to model the differences between documents under different scenarios such as region, loan type or legal professional.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Template</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Scenarios (Document Template)</relationshipLabel>
        <relationshipName>DocumentScenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoanType__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facility Loan</fullName>
                </value>
                <value>
                    <fullName>Lump-Sum</fullName>
                </value>
                <value>
                    <fullName>Treatment Loan</fullName>
                </value>
                <value>
                    <fullName>Treatment Loan 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Scenario_Region__c</referenceTo>
        <relationshipLabel>Scenarios</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scenario</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>LoanType__c</columns>
        <columns>Region__c</columns>
        <columns>DocumentTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>